# tapfer

./: .dockerignore  .envrc  Caddyfile  Cargo.toml  Dockerfile  GLOSSARY.md  LICENSE  README.md  dev.md  docker-compose.yml  reverxe_proxy.md  todo.md  webserver_config.md
reverse_proxy/: nginx.conf
src/: api_doc.rs  case_insensitive_path.rs  configuration.rs  error.rs  error_compat.rs  file_meta.rs  main.rs  retention_control.rs  tapfer_id.rs  upload_pool.rs  util.rs  websocket.rs
src/handlers/: checksum.rs  delete.rs  deposit.rs  download.rs  homepage.rs  mod.rs  not_found.rs  qrcode.rs  upload.rs
src/structs/: error.rs  file_meta.rs  mod.rs  tapfer_id.rs
src/updown/: mod.rs  upload_handle.rs  upload_pool.rs
tapfer_crypt/: Cargo.toml
tapfer_crypt/src/: lib.rs  qrcode.rs
templates/: 404.html  deposit.html  download.html  favicon.html  footer.html  homepage.html  meta.html  style.html
templates/components/: footer.html  meta.html  style.html  toast.html  ws_shutdown_listener.js
