[package]
name = "tapfer"
version = "0.1.0"
edition = "2024"
authors = ["FlareFlo"]
license = "MIT"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"]}
serde = { version = "1.0", features = ["derive"]}
time = {version = "0.3.41", features = ["serde"]}
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
futures-core = "0.3.31"
askama = "0.13.0"
