[package]
name = "tapfer"
version = "0.1.0"
edition = "2024"
authors = ["FlareFlo"]
license = "MIT"

[dependencies]

# Axum & friends
axum = { version = "0.8.3", features = ["multipart", "macros", "ws"]}
axum-extra = "0.10.1"
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["fs", "limit", "trace", "cors"] }
http = "1.3.1"


# Async
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io"] }
futures-core = "0.3.31"
futures-util = "0.3.31"


# Parsing and formats
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.22.1"
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4", "serde"] }


# Time
time-tz = "2.0.0"
time = {version = "0.3.41", features = ["serde", "macros", "formatting"]}


# Docs rendering
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Error handling
thiserror = "2.0.12"
ctrlc = { version = "3.4.6", features = ["termination"]}


# Formatting and displaying
askama = "0.14.0"
qrcode-generator = "5.0.0"
human_bytes = "0.4.3"


# Misc.
dashmap = "6.1.0"
scopeguard = "1.2.0"
mime = "0.3.17"


[features]
dev-slow-upload  = []